--- a/DeepAnt.ipynb
+++ b/DeepAnt.ipynb
@@ -517,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 ('dl')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -531,9 +531,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.16"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "ba3466b07e6b45ec61c3295167d4defc728dc645b1951921b54bb781fa72b9bb"
@@ -541,5 +540,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
