--- a/DeepAnt-Copy1.ipynb
+++ b/DeepAnt-Copy1.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-18T16:59:26.198476Z",
-     "iopub.status.busy": "2023-01-18T16:59:26.197559Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.127232Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.126361Z",
-     "shell.execute_reply.started": "2023-01-18T16:59:26.198439Z"
+     "iopub.execute_input": "2023-01-22T18:28:14.495754Z",
+     "iopub.status.busy": "2023-01-22T18:28:14.495380Z",
+     "iopub.status.idle": "2023-01-22T18:28:19.220803Z",
+     "shell.execute_reply": "2023-01-22T18:28:19.219883Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:14.495728Z"
     },
     "tags": []
    },
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-18T17:00:07.131679Z",
-     "iopub.status.busy": "2023-01-18T17:00:07.130866Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.728651Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.727740Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.131652Z"
+     "iopub.execute_input": "2023-01-22T18:28:19.223521Z",
+     "iopub.status.busy": "2023-01-22T18:28:19.222888Z",
+     "iopub.status.idle": "2023-01-22T18:28:19.771020Z",
+     "shell.execute_reply": "2023-01-22T18:28:19.770213Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:19.223481Z"
     },
     "tags": []
    },
@@ -255,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-18T17:00:07.745603Z",
-     "iopub.status.busy": "2023-01-18T17:00:07.744941Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.755636Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.754643Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.745578Z"
+     "iopub.execute_input": "2023-01-22T18:28:25.845386Z",
+     "iopub.status.busy": "2023-01-22T18:28:25.845000Z",
+     "iopub.status.idle": "2023-01-22T18:28:25.864499Z",
+     "shell.execute_reply": "2023-01-22T18:28:25.863540Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:25.845361Z"
     },
     "tags": []
    },
@@ -273,7 +273,7 @@
        "82"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-18T17:00:07.757884Z",
-     "iopub.status.busy": "2023-01-18T17:00:07.757428Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.765976Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.764829Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.757858Z"
+     "iopub.execute_input": "2023-01-22T18:28:28.925961Z",
+     "iopub.status.busy": "2023-01-22T18:28:28.925578Z",
+     "iopub.status.idle": "2023-01-22T18:28:28.933710Z",
+     "shell.execute_reply": "2023-01-22T18:28:28.932954Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:28.925936Z"
     },
     "tags": []
    },
@@ -372,19 +372,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-01-18T17:00:07.952317Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.952996Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.952691Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.952668Z"
+     "iopub.execute_input": "2023-01-22T18:28:36.891702Z",
+     "iopub.status.busy": "2023-01-22T18:28:36.891055Z",
+     "iopub.status.idle": "2023-01-22T18:28:36.937946Z",
+     "shell.execute_reply": "2023-01-22T18:28:36.936320Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:36.891675Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 164]), torch.Size([1]), 10836)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "SEQ_LEN = 82*10\n",
+    "SEQ_LEN = 82*2\n",
     "dataset = TrafficDataset(df, SEQ_LEN)\n",
     "target_idx = dataset.timestamp # Timestamps to detect where the Anomaly Happens\n",
     "X, y = dataset[0]\n",
@@ -393,17 +405,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-01-18T17:00:07.954478Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.955011Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.954822Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.954803Z"
+     "iopub.execute_input": "2023-01-22T18:28:39.999403Z",
+     "iopub.status.busy": "2023-01-22T18:28:39.998695Z",
+     "iopub.status.idle": "2023-01-22T18:28:40.099524Z",
+     "shell.execute_reply": "2023-01-22T18:28:40.098405Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:39.999370Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = DeepAnt(SEQ_LEN, 1)\n",
     "sample = torch.randn(32,1,SEQ_LEN)\n",
@@ -413,17 +437,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-01-18T17:00:07.956293Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.956866Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.956663Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.956642Z"
+     "iopub.execute_input": "2023-01-22T18:28:42.235755Z",
+     "iopub.status.busy": "2023-01-22T18:28:42.235378Z",
+     "iopub.status.idle": "2023-01-22T18:28:42.249816Z",
+     "shell.execute_reply": "2023-01-22T18:28:42.248631Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:42.235730Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "=================================================================\n",
+       "Layer (type:depth-idx)                   Param #\n",
+       "=================================================================\n",
+       "DeepAnt                                  --\n",
+       "├─Sequential: 1-1                        --\n",
+       "│    └─Conv1d: 2-1                       128\n",
+       "│    └─ReLU: 2-2                         --\n",
+       "│    └─MaxPool1d: 2-3                    --\n",
+       "├─Sequential: 1-2                        --\n",
+       "│    └─Conv1d: 2-4                       3,104\n",
+       "│    └─ReLU: 2-5                         --\n",
+       "│    └─MaxPool1d: 2-6                    --\n",
+       "├─Flatten: 1-3                           --\n",
+       "├─Sequential: 1-4                        --\n",
+       "│    └─Linear: 2-7                       49,960\n",
+       "│    └─ReLU: 2-8                         --\n",
+       "│    └─Dropout: 2-9                      --\n",
+       "├─Linear: 1-5                            41\n",
+       "=================================================================\n",
+       "Total params: 53,233\n",
+       "Trainable params: 53,233\n",
+       "Non-trainable params: 0\n",
+       "================================================================="
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = DeepAnt(SEQ_LEN, 1)\n",
     "anomaly_detector = AnomalyDetector(model)\n",
@@ -443,20 +501,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-01-18T17:00:07.958225Z",
-     "iopub.status.idle": "2023-01-18T17:00:07.958746Z",
-     "shell.execute_reply": "2023-01-18T17:00:07.958562Z",
-     "shell.execute_reply.started": "2023-01-18T17:00:07.958544Z"
+     "iopub.execute_input": "2023-01-22T18:28:47.112470Z",
+     "iopub.status.busy": "2023-01-22T18:28:47.112057Z",
+     "iopub.status.idle": "2023-01-22T18:40:07.293483Z",
+     "shell.execute_reply": "2023-01-22T18:40:07.291892Z",
+     "shell.execute_reply.started": "2023-01-22T18:28:47.112444Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "Missing logger folder: /Users/Okano700/Documents/GitHub/DeepAntEmerson/lightning_logs\n",
+      "\n",
+      "  | Name      | Type    | Params\n",
+      "--------------------------------------\n",
+      "0 | model     | DeepAnt | 53.2 K\n",
+      "1 | criterion | L1Loss  | 0     \n",
+      "--------------------------------------\n",
+      "53.2 K    Trainable params\n",
+      "0         Non-trainable params\n",
+      "53.2 K    Total params\n",
+      "0.213     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: 100%|█| 339/339 [00:27<00:00, 12.46it/s, loss=0.177, v_num=0, train_los"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, global step 339: 'train_loss' reached 0.14050 (best 0.14050), saving model to '/Users/Okano700/Documents/GitHub/DeepAntEmerson/checkpoints1/epoch=0-step=339.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|█| 339/339 [01:10<00:00,  4.81it/s, loss=0.122, v_num=0, train_los"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, global step 678: 'train_loss' reached 0.10703 (best 0.10703), saving model to '/Users/Okano700/Documents/GitHub/DeepAntEmerson/checkpoints1/epoch=1-step=678.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2: 100%|█| 339/339 [01:10<00:00,  4.84it/s, loss=0.105, v_num=0, train_los"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, global step 1017: 'train_loss' reached 0.09916 (best 0.09916), saving model to '/Users/Okano700/Documents/GitHub/DeepAntEmerson/checkpoints1/epoch=2-step=1017.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3: 100%|█| 339/339 [01:09<00:00,  4.84it/s, loss=0.0922, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, global step 1356: 'train_loss' reached 0.06956 (best 0.06956), saving model to '/Users/Okano700/Documents/GitHub/DeepAntEmerson/checkpoints1/epoch=3-step=1356.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4: 100%|█| 339/339 [01:11<00:00,  4.76it/s, loss=0.0863, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, global step 1695: 'train_loss' was not in top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5: 100%|█| 339/339 [01:05<00:00,  5.14it/s, loss=0.0836, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, global step 2034: 'train_loss' reached 0.06122 (best 0.06122), saving model to '/Users/Okano700/Documents/GitHub/DeepAntEmerson/checkpoints1/epoch=5-step=2034.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6: 100%|█| 339/339 [01:04<00:00,  5.25it/s, loss=0.0807, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, global step 2373: 'train_loss' was not in top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7: 100%|█| 339/339 [01:06<00:00,  5.13it/s, loss=0.0726, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, global step 2712: 'train_loss' reached 0.05857 (best 0.05857), saving model to '/Users/Okano700/Documents/GitHub/DeepAntEmerson/checkpoints1/epoch=7-step=2712.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8: 100%|█| 339/339 [01:06<00:00,  5.12it/s, loss=0.0753, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, global step 3051: 'train_loss' was not in top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9: 100%|█| 339/339 [01:08<00:00,  4.98it/s, loss=0.0722, v_num=0, train_lo"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, global step 3390: 'train_loss' was not in top 1\n",
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9: 100%|█| 339/339 [01:08<00:00,  4.98it/s, loss=0.0722, v_num=0, train_lo\n"
+     ]
+    }
+   ],
    "source": [
-    "trainer = pl.Trainer(max_epochs=30,\n",
-    "                    #accelerator=\"gpu\",\n",
+    "trainer = pl.Trainer(max_epochs=10,\n",
+    "                    accelerator=\"auto\",\n",
     "                    devices=1, \n",
     "                    callbacks=[mc], \n",
     "                    #progress_bar_refresh_rate=30, \n",
