--- a/GS.ipynb
+++ b/GS.ipynb
@@ -2513,11 +2513,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-24T14:49:08.158696Z",
+     "iopub.status.busy": "2023-01-24T14:49:08.158257Z",
+     "iopub.status.idle": "2023-01-24T14:49:08.165436Z",
+     "shell.execute_reply": "2023-01-24T14:49:08.164543Z",
+     "shell.execute_reply.started": "2023-01-24T14:49:08.158669Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'run': 'UCR_120_ECG2_25', 'auc': 0.6836090604026845},\n",
+       " {'run': 'UCR_120_ECG2_50', 'auc': 0.6494412751677853},\n",
+       " {'run': 'UCR_120_ECG2_75', 'auc': 0.6624721476510067},\n",
+       " {'run': 'UCR_120_ECG2_94', 'auc': 0.6210214765100672}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res"
    ]
@@ -2623,6 +2644,109 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-24T14:47:33.124237Z",
+     "iopub.status.busy": "2023-01-24T14:47:33.123729Z",
+     "iopub.status.idle": "2023-01-24T14:47:33.138926Z",
+     "shell.execute_reply": "2023-01-24T14:47:33.137853Z",
+     "shell.execute_reply.started": "2023-01-24T14:47:33.124197Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'threshold': 0.1,\n",
+       "  'precision': 0.0069767441860465115,\n",
+       "  'recall': 0.06,\n",
+       "  'f1-score': 0.0069767441860465115,\n",
+       "  'acc': 0.9368},\n",
+       " {'threshold': 0.2,\n",
+       "  'precision': 0.023809523809523808,\n",
+       "  'recall': 0.04,\n",
+       "  'f1-score': 0.023809523809523808,\n",
+       "  'acc': 0.9826666666666667},\n",
+       " {'threshold': 0.30000000000000004,\n",
+       "  'precision': 0.125,\n",
+       "  'recall': 0.02,\n",
+       "  'f1-score': 0.125,\n",
+       "  'acc': 0.9925333333333334},\n",
+       " {'threshold': 0.4,\n",
+       "  'precision': 0.0,\n",
+       "  'recall': 0.0,\n",
+       "  'f1-score': 0.0,\n",
+       "  'acc': 0.9933333333333333},\n",
+       " {'threshold': 0.5,\n",
+       "  'precision': 0.0,\n",
+       "  'recall': 0.0,\n",
+       "  'f1-score': 0.0,\n",
+       "  'acc': 0.9933333333333333},\n",
+       " {'threshold': 0.6,\n",
+       "  'precision': 0.0,\n",
+       "  'recall': 0.0,\n",
+       "  'f1-score': 0.0,\n",
+       "  'acc': 0.9933333333333333},\n",
+       " {'threshold': 0.7000000000000001,\n",
+       "  'precision': 0.0,\n",
+       "  'recall': 0.0,\n",
+       "  'f1-score': 0.0,\n",
+       "  'acc': 0.9933333333333333},\n",
+       " {'threshold': 0.8,\n",
+       "  'precision': 0.0,\n",
+       "  'recall': 0.0,\n",
+       "  'f1-score': 0.0,\n",
+       "  'acc': 0.9933333333333333},\n",
+       " {'threshold': 0.9,\n",
+       "  'precision': 0.0,\n",
+       "  'recall': 0.0,\n",
+       "  'f1-score': 0.0,\n",
+       "  'acc': 0.9933333333333333}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-24T14:47:57.498693Z",
+     "iopub.status.busy": "2023-01-24T14:47:57.498231Z",
+     "iopub.status.idle": "2023-01-24T14:47:57.506904Z",
+     "shell.execute_reply": "2023-01-24T14:47:57.505547Z",
+     "shell.execute_reply.started": "2023-01-24T14:47:57.498663Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'run': 'UCR_120_ECG2_25', 'auc': 0.6836090604026845},\n",
+       " {'run': 'UCR_120_ECG2_50', 'auc': 0.6494412751677853},\n",
+       " {'run': 'UCR_120_ECG2_75', 'auc': 0.6624721476510067},\n",
+       " {'run': 'UCR_120_ECG2_94', 'auc': 0.6210214765100672}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res"
    ]
